--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vite-plugin-eslint": "^1.3.0"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^2.2.0",
     "@studio-freight/lenis": "^1.0.27",
     "gsap": "^3.9.1"
   }
