--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "dependencies": {
     "@stripe/stripe-js": "^2.2.0",
-    "@studio-freight/lenis": "^1.0.27",
-    "gsap": "^3.9.1"
+    "@studio-freight/lenis": "^1.0.28",
+    "gsap": "^3.12.2",
+    "split-type": "^0.3.4"
   }
 }
