--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@stripe/stripe-js": "^2.2.0",
     "@studio-freight/lenis": "^1.0.28",
     "gsap": "^3.12.2",
+    "lottie-web": "^5.12.2",
     "split-type": "^0.3.4"
   }
 }
